# DGSort

./: .gitmodules  CMakeLists.txt  CORE_RL_Magick++_.lib  DGSort.cpp  README.md  SDLApp.cpp  SDLApp.h  SortMachine.cpp
application/: CMakeLists.txt  DGSort.cpp
modules/: CMakeLists.txt
modules/include/: SDLApp.h  SortMachine.h
modules/src/: SDLApp.cpp
