set(app_name "Sorter")

add_executable(${app_name} DGSort.cpp)
target_link_libraries(${app_name} app_libs)
target_link_libraries(${app_name} SDL2)
target_link_libraries(${app_name} SDL2_mixer)
add_library(fi STATIC IMPORTED)
set_target_properties(fi PROPERTIES IMPORTED_LOCATION "${fi_path}/FreeImage.lib")
target_link_libraries(${app_name} fi)
add_library(nfd STATIC IMPORTED)
set_target_properties(nfd PROPERTIES IMPORTED_LOCATION_DEBUG "${nfd_path}/nfd_d.lib")
set_target_properties(nfd PROPERTIES IMPORTED_LOCATION "${nfd_path}/nfd.lib")
target_link_libraries(${app_name} nfd)

target_link_options(${app_name} PRIVATE "/SUBSYSTEM:WINDOWS")
target_link_options(${app_name} PRIVATE /ENTRY:\"mainCRTStartup\")